# urdf_parser_py

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
.travis/: build
scripts/: display_urdf
src/urdf_parser_py/: __init__.py  _xml_reflection.py  display_urdf.py  sdf.py  urdf.py
src/urdf_parser_py/xml_reflection/: __init__.py  basics.py  core.py
test/: test_base.py  test_urdf.py  test_urdf_error.py  xml_matching.py
test/calvin/: test.sh
test/romeo/: gen.patch  parse_bad.py  romeo_bad.urdf  test.sh  test_bad.sh
